--- a/guiHa.glade
+++ b/guiHa.glade
@@ -2,6 +2,74 @@
 <!-- Generated with glade 3.16.1 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
+  <object class="GtkWindow" id="Error">
+    <property name="name">Windw_Err</property>
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Error!!!</property>
+    <property name="window_position">center</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="type_hint">dialog</property>
+    <property name="urgency_hint">True</property>
+    <property name="gravity">center</property>
+    <property name="has_resize_grip">False</property>
+    <child>
+      <object class="GtkBox" id="Grd_ErrorWindw">
+        <property name="name">Grd_Err</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <object class="GtkPaned" id="HPane_Error">
+            <property name="name">HPane_Error</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="valign">center</property>
+            <property name="position">50</property>
+            <child>
+              <object class="GtkImage" id="Image_Erro">
+                <property name="name">Image_Error</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="halign">center</property>
+                <property name="valign">center</property>
+                <property name="stock">gtk-dialog-error</property>
+                <property name="icon_size">6</property>
+              </object>
+              <packing>
+                <property name="resize">True</property>
+                <property name="shrink">False</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="Txt_Error">
+                <property name="name">Txt_Error</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="editable">False</property>
+                <property name="has_frame">False</property>
+                <property name="caps_lock_warning">False</property>
+              </object>
+              <packing>
+                <property name="resize">True</property>
+                <property name="shrink">True</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkImage" id="Img_Config">
     <property name="name">Img_Config</property>
     <property name="visible">True</property>
@@ -47,12 +115,12 @@
       </object>
     </child>
   </object>
-  <object class="GtkEntryBuffer" id="entrybuffer1"/>
-  <object class="GtkEntryBuffer" id="entrybuffer2"/>
   <object class="GtkWindow" id="LoginMain">
     <property name="name">Windw_Login</property>
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Authentication Window</property>
     <property name="window_position">center</property>
+    <property name="destroy_with_parent">True</property>
     <property name="gravity">center</property>
     <property name="has_resize_grip">False</property>
     <child>
@@ -91,7 +159,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="has_tooltip">True</property>
-                <property name="buffer">entrybuffer1</property>
                 <property name="max_length">25</property>
               </object>
               <packing>
@@ -133,8 +200,8 @@
               <object class="GtkEntry" id="TxtBx_Pswd">
                 <property name="name">TxtBx_Pswd</property>
                 <property name="can_focus">True</property>
-                <property name="buffer">entrybuffer2</property>
                 <property name="max_length">25</property>
+                <property name="visibility">False</property>
                 <property name="input_purpose">password</property>
               </object>
               <packing>
@@ -170,5 +237,4 @@
       </object>
     </child>
   </object>
-  <object class="GtkEntryCompletion" id="entrycompletion1"/>
 </interface>
